2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* AcasType.cs:
	* MiniZinc.cs:
	* HeadTail.cs:
	* Manpage.txt:
	* MiniZinc.lex:
	* SetLiteral.cs:
	* FloatRange.cs:
	* Interaction.cs:
	* MiniZinc.bison:
	* AcasFunction.cs:
	* IntegerRange.cs:
	* AcasConstant.cs:
	* AcasVariable.cs:
	* AcasOperator.cs:
	* FourStateLogic.cs:
	* AcasIExpression.cs:
	* ThreeValueLogic.cs:
	* EvaluationResult.cs:
	* CompilerVerbosity.cs:
	* AcasExpressionBase.cs:
	* AcasGenericFunction.cs:
	* AcasFunctionInstance.cs:
	* AcasBinaryOperatorFlags.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* EnumerableUtils.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* ZincException.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* IName.cs:
	* NameBase.cs:
	* HeadTail.cs:
	* ZincIdent.cs: 

2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* HeadTail.cs:
	* ZincData.cs:
	* ZincItem.cs:
	* ZincType.cs:
	* IZincItem.cs:
	* ZincModel.cs:
	* ZincIName.cs:
	* ZincIScope.cs:
	* ZincScalar.cs:
	* MiniZinc.bison:
	* ZincInstance.cs:
	* ZincEnumItem.cs:
	* ZincCompound.cs:
	* ZincNameBase.cs:
	* ZincFunction.cs:
	* ZincNamespace.cs:
	* ZincException.cs:
	* ZincPredicate.cs:
	* ZincScopeBase.cs:
	* ZincTotalOrder.cs:
	* ZincINamespace.cs:
	* MiniZincParser.cs:
	* ZincIdentifier.cs:
	* ZincVarDeclItem.cs:
	* ZincTypeInstance.cs:
	* ZincParseException.cs:
	* ZincGlobalVariable.cs: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.lex:
	* MiniZinc.bison:
	* MiniZincParser.cs: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* HeadTail.cs:
	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* MiniZinc.lex:
	* MiniZinc.bison: 

2013-09-17  Willem Van Onsem  <vanonsem.willem@gmail.com>

	* MiniZinc.cs:
	* MiniZinc.lex: