@@ -22,11 +22,11 @@ using System;
 
 namespace ZincOxide {
 
-    public class Interaction {
+    public static class Interaction {
 
-        private CompilerVerbosity verbosityLevel;
+        private static CompilerVerbosity verbosityLevel;
 
-        public void GenericMessage (CompilerVerbosity verbosity, string format, params object[] args) {
+        public static void GenericMessage (CompilerVerbosity verbosity, string format, params object[] args) {
             if ((verbosity & verbosityLevel) != 0x00) {
                 Console.Write (verbosity.ToString ());
                 Console.Write (": ");
@@ -34,20 +34,20 @@ namespace ZincOxide {
             }
         }
 
-        public void Warning (string format, params object[] args) {
-            this.GenericMessage (CompilerVerbosity.Remark, format, args);
+        public static void Warning (string format, params object[] args) {
+            GenericMessage (CompilerVerbosity.Remark, format, args);
         }
 
-        public void Error (string format, params object[] args) {
-            this.GenericMessage (CompilerVerbosity.Error, format, args);
+        public static void Error (string format, params object[] args) {
+            GenericMessage (CompilerVerbosity.Error, format, args);
         }
 
-        public void Remark (string format, params object[] args) {
-            this.GenericMessage (CompilerVerbosity.Remark, format, args);
+        public static void Remark (string format, params object[] args) {
+            GenericMessage (CompilerVerbosity.Remark, format, args);
         }
 
-        public void Assumption (string format, params object[] args) {
-            this.GenericMessage (CompilerVerbosity.Assumption, format, args);
+        public static void Assumption (string format, params object[] args) {
+            GenericMessage (CompilerVerbosity.Assumption, format, args);
         }
 
     }
