@@ -98,29 +98,11 @@ COMMENT \%[^%\r\n]*
 %%
 
 %%
-public static void Main(string[] argp) {
-    Console.WriteLine("This is ZincOxide version 0.1 (2013)");
-    if (argp.Length == 0) {
-        Console.WriteLine("Usage: [options] file");
-        Console.WriteLine("Type \"zincoxide --help\" for more information.");
-    }
-    DirectoryInfo dirInfo = new DirectoryInfo(".");
-    for (int i = 0; i < argp.Length; i++) {
-        string name = argp[i];
-        FileInfo[] fInfo = dirInfo.GetFiles(name);
-        foreach (FileInfo info in fInfo) {
-            try {
-                int tok;
-                FileStream file = new FileStream(info.Name, FileMode.Open); 
-                Scanner scnr = new Scanner(file);
-                Console.WriteLine("Processing file: " + info.Name);
-                do {
-                    tok = scnr.yylex();
-                    Console.WriteLine(tok);
-                } while (tok > (int)Tokens.EOF);
-            } catch (IOException) {
-                Console.WriteLine("File " + name + " not found");
-            }
-        }
-    }
+public void Tokenize(Stream stream) {
+    Scanner scnr = new Scanner(file);
+    Console.WriteLine("Processing file: " + info.Name);
+    do {
+        tok = scnr.yylex();
+        Console.WriteLine(tok);
+    } while (tok > (int)Tokens.EOF);
 }
