@@ -1,5 +1,13 @@
 2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
 
+	* MiniZinc.lex:
+	* IReadable.cs:
+	* IWriteable.cs:
+	* Interaction.cs:
+	* ReadWriteableUtils.cs: 
+
+2013-09-18  Willem Van Onsem  <vanonsem.willem@gmail.com>
+
 	* AcasType.cs:
 	* MiniZinc.cs:
 	* HeadTail.cs:
